--- a/src/components/PostItem/PostItem.module.scss
+++ b/src/components/PostItem/PostItem.module.scss
@@ -1,3 +1,3 @@
 .postlist {
-	@apply flex justify-between my-5 border border-green-600 rounded-lg items-center p-5
+	@apply flex justify-between max-w-96 my-5 border border-green-600 rounded-lg items-center p-5
 }
