--- a/src/components/UI/buttons/PrimaryButton/PrimaryButton.module.scss
+++ b/src/components/UI/buttons/PrimaryButton/PrimaryButton.module.scss
@@ -1,8 +1,3 @@
 .button {
-	padding: 5px 15px;
-	color: teal;
-	font-size: 14px;
-	background: transparent;
-	border: 1px solid teal;
-	cursor: pointer;
+	@apply px-4 py-2 border border-green-600 rounded-lg cursor-pointer text-green-600 hover:bg-green-300
 }
