--- a/src/components/UI/input/PrimaryInput.module.scss
+++ b/src/components/UI/input/PrimaryInput.module.scss
@@ -1,6 +1,3 @@
 .input {
-	width: 100%;
-	padding: 5px 15px;
-	margin: 5px 0;
-	border: 1px solid teal;
+	@apply min-w-80 border border-green-600 rounded-lg px-2 py-2 my-2
 }
