--- a/src/components/UI/buttons/PrimaryButton/PrimaryButton.module.scss
+++ b/src/components/UI/buttons/PrimaryButton/PrimaryButton.module.scss
@@ -1,3 +1,3 @@
 .button {
-	@apply px-4 py-2 border border-green-600 rounded-lg cursor-pointer text-green-600 hover:bg-green-300
+	@apply max-h-10 px-4 py-2 border border-green-600 rounded-lg cursor-pointer text-green-600 hover:bg-green-300
 }
