--- a/src/components/UI/input/PrimaryInput.module.scss
+++ b/src/components/UI/input/PrimaryInput.module.scss
@@ -1,3 +1,10 @@
 .input {
-	@apply min-w-80 border border-green-600 rounded-lg px-2 py-2 my-2
+	@apply 
+		max-h-8 
+		border 
+		border-green-600 
+		rounded-lg 
+		p-2
+		my-2
+		w-80
 }
